# sample-opal-tools

./: .vercelignore  Dockerfile  Procfile  README.md  nixpacks.toml  package.json  railway.toml  requirements-heavy.txt  requirements-light.txt  requirements.txt  start.sh  test-ab-viewer.html  vercel.json
api/: heavy.py  index.py
dotnet/greeting/: Dockerfile  OpalToolsSDK.Sample.csproj  Program.cs  README.md  Samples.cs
dotnet/greeting/Properties/: launchSettings.json
python/ab_test_detector/: main.py  pyproject.toml
python/ab_test_detector/ab_test_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/docs/: creating_tools.md
python/google_sheets/: main.py  pyproject.toml
python/google_sheets/google_sheets_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/greeting/: Dockerfile  README.md  main.py  requirements.txt
python/lighthouse/: main.py  pyproject.toml  test.json
python/lighthouse/lighthouse_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/weather/: requirements.txt
typescript/greeting/: package-lock.json  package.json
typescript/greeting/src/: index.ts
weather-tool/: Dockerfile.production  README.md  main.py  pyproject.toml
