[project]
name = "ab-test-detector"
version = "0.1.0"
description = "Detects A/B tests on competitor websites by analyzing screenshot variations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.13",
    "optimizely-opal-opal-tools-sdk>=0.1.1.dev0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scikit-image>=0.22.0",
    "imagehash>=4.3.0",
]